--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --open",
-    "build": "webpack --mode production",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "build": "webpack --mode production"
   },
   "keywords": [
     "react",
@@ -36,12 +34,10 @@
   "devDependencies": {
     "css-loader": "^6.5.1",
     "file-loader": "^6.2.0",
-    "gh-pages": "^3.2.3",
     "mini-css-extract-plugin": "^2.4.5",
     "sass": "^1.43.4",
     "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
     "svg-url-loader": "^7.1.1"
-  },
-  "homepage": "https://raimonkoudsi.github.io/platzi-shop/"
+  }
 }
