--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage" : "https://raimonkoudsi.github.io/",
+  "homepage" : "https://raimonkoudsi.github.io/koudsi-shop/",
   "name": "koudsi-shop",
   "version": "1.0.0",
   "description": "ecommerce de react",
